--- a/index_univ.html
+++ b/index_univ.html
@@ -658,7 +658,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM02.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPCgM02.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -674,7 +674,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM03.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPCgM03.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -690,7 +690,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM04.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPCgM04.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -706,7 +706,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPCgM05.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPCgM05.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
