--- a/mobile/UI_ADHPCgM03.html
+++ b/mobile/UI_ADHPCgM03.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업 - IAP결과관리_등록(제출및저장전)</title>
+        <title>점프업 - IAP결과관리_수정(저장후제출전)</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
@@ -106,12 +106,12 @@
                                         <div class="dt"><span class="req_mark">참여일자</span></div>
                                         <div class="dd dd_date_row">
                                             <div class="date_area">
-                                                <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="2025-01-01" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
                                                 <button type="button" class="calendar"><span>달력</span></button>
                                             </div>
                                             <span class="b1_sb">~</span>
                                             <div class="date_area">
-                                                <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="2025-12-31" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
                                                 <button type="button" class="calendar"><span>달력</span></button>
                                             </div>
                                         </div>
@@ -120,7 +120,7 @@
                                         <div class="dt"><span class="req_mark">참여시간</span></div>
                                         <div class="dd dd_row_ipt">
                                             <span class="box_ipt new_ipt">
-                                                <input type="text" class="input_txt" title="참여시간" placeholder="">
+                                                <input type="text" class="input_txt" title="참여시간" placeholder="" value="100">
                                                 <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                             </span>
                                             <span class="s1_b row_ipt_txt">시간</span>
@@ -129,6 +129,7 @@
                                 </div>
                             </div>
                         </div>
+
 
                         <div class="after_border">
                             <div class="iap_attfile_wrap mt16">
@@ -149,6 +150,24 @@
                                         <input type="file" id="files" style="display: none;">
                                     </div>
                                 </div>
+                                <ul class="ul_iap_addlist mt16" id="fileList">
+                                    <li class="att_li">
+                                        <div class="att_li_txt"><p>파일명.pdf</p></div>
+                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
+                                    </li>
+                                    <li class="att_li">
+                                        <div class="att_li_txt"><p>파일명.pdf</p></div>
+                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
+                                    </li>
+                                    <li class="att_li">
+                                        <div class="att_li_txt"><p>파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명 파일명.pdf</p></div>
+                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
+                                    </li>
+                                    <li class="att_li">
+                                        <div class="att_li_txt"><p>파일명 파일명 파일명 파일명 파일명.pdf</p></div>
+                                        <div class="att_li_btn"><button type="button" class="att_del_btn"><span class="sr_only">첨부파일 삭제</span></button></div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
 
