--- a/index_univ.html
+++ b/index_univ.html
@@ -723,7 +723,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChM01_1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChM01_2.html" target="_blank">PC-2</a>
-                        <a href="./mobile/UI_ADHPChM01.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChM01.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -740,7 +740,8 @@
                     <td>
                         <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChS02-2.html" target="_blank">PC-2</a>
-                        <a href="./mobile/UI_ADHPChM02.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChS02-1.html" target="_blank">Mo-1</a>
+                        <a href="./mobile/UI_ADHPChS02-2.html" target="_blank">Mo-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -788,7 +789,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS05.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPChS05.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChS05.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -805,7 +806,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChS06-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChS06-2.html" target="_blank">PC-2</a>
-                        <a href="./mobile/UI_ADHPChS06.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChS06.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -821,7 +822,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPChS07.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChS07.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -837,7 +838,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS08.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPChS08.html" target="_blank" class="none">Mo</a>
+                        <a href="./mobile/UI_ADHPChS08.html" target="_blank">Mo</a>
                     </td>
                 </tr>
             </tbody>
