--- a/mobile/UI_ADHPChS06.html
+++ b/mobile/UI_ADHPChS06.html
@@ -40,6 +40,9 @@
                             <p class="desc t3_r">지금까지 <span class="count">00</span><span class="txt_bold">건</span>에 대해서<br aria-hidden="true"> <span class="txt_bold">총 <span class="amount">100,000</span>원</span>을 지급 받으셨습니다.</p>
                         </div>
 
+                        <div class="">
+                        </div>
+
                         <div class="my_ptcp_from">
                             <div class="box_group_wrap mt24">
                                 <h3 class="t3_sb">참여자 정보</h3>
