--- a/index_univ.html
+++ b/index_univ.html
@@ -498,7 +498,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_조회</td>
                     <td>UI_ADHPCeS07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS07.html" target="_blank">PC</a>
@@ -514,7 +514,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_목록</td>
                     <td>UI_ADHPCfM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfM01_1.html" target="_blank">PC-1</a>
@@ -537,7 +537,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_등록</td>
                     <td>UI_ADHPCfS02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS02.html" target="_blank">PC</a>
@@ -554,7 +554,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회/수정(저장)</td>
                     <td>UI_ADHPCfS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS03.html" target="_blank">PC</a>
@@ -570,7 +570,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회(제출)</td>
                     <td>UI_ADHPCfS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS04.html" target="_blank">PC</a>
@@ -587,7 +587,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_수정(보완요청_제출후)</td>
                     <td>UI_ADHPCfS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS05.html" target="_blank">PC</a>
@@ -603,7 +603,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_수정(변경신청_승인후)</td>
                     <td>UI_ADHPCfS06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS06.html" target="_blank">PC</a>
@@ -619,7 +619,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP관리_조회(변경제출)</td>
                     <td>UI_ADHPCfS07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS07.html" target="_blank">PC</a>
@@ -635,7 +635,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_목록</td>
                     <td>UI_ADHPCgM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM01-1.html" target="_blank">PC-1</a>
@@ -654,7 +654,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_등록(제출및저장전)</td>
                     <td>UI_ADHPCgM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
@@ -670,7 +670,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(저장후제출전)</td>
                     <td>UI_ADHPCgM03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
@@ -686,7 +686,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_조회(제출후)</td>
                     <td>UI_ADHPCgM04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
@@ -702,7 +702,7 @@
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(보완요청_제출후)</td>
                     <td>UI_ADHPCgM05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
@@ -718,7 +718,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트관리_목록</td>
                     <td>UI_ADHPChM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChM01_1.html" target="_blank">PC-1</a>
@@ -735,7 +735,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트관리_신청(등록)</td>
                     <td>UI_ADHPChS02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
@@ -785,7 +785,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_수정(저장후제출전)</td>
                     <td>UI_ADHPChS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS05.html" target="_blank">PC</a>
@@ -801,7 +801,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(제출후)</td>
                     <td>UI_ADHPChS06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS06-1.html" target="_blank">PC-1</a>
@@ -818,7 +818,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(보완요청)</td>
                     <td>UI_ADHPChS07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
@@ -834,7 +834,7 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>포인트관리_조회(승인, 미지급, 환급)</td>
                     <td>UI_ADHPChS08</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS08.html" target="_blank">PC</a>
