--- a/mobile/UI_ADHPChS08.html
+++ b/mobile/UI_ADHPChS08.html
@@ -40,6 +40,112 @@
                             <p class="desc t3_r">지금까지 <span class="count">00</span><span class="txt_bold">건</span>에 대해서<br aria-hidden="true"> <span class="txt_bold">총 <span class="amount">100,000</span>원</span>을 지급 받으셨습니다.</p>
                         </div>
 
+                        <div class="allowance_info_wrap">
+                            <h3 class="t3_sb">수당지급 정보 <span class="t3_r">(비용신청 <span class="txt_nth t3_sb">N</span>회차)</span></h3>
+                            <div class="allowance_info_box">
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">지급상태</div>
+                                        <div class="dd">지급</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">지급일자</div>
+                                        <div class="dd">2025-00-00</div>
+                                    </li>
+                                </ul>
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">총 활동 요청시간</div>
+                                        <div class="dd"><span class="txt_value">10</span> 시간</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">총 활동 인정시간</div>
+                                        <div class="dd"><span class="txt_value">10</span> 시간</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">신청금액</div>
+                                        <div class="dd"><span class="txt_value">100,000</span> 원</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">인정금액</div>
+                                        <div class="dd"><span class="txt_value">100,000</span> 원</div>
+                                    </li>
+                                    <li class="allowance_info_twin">
+                                        <div class="td">의견내용</div>
+                                        <div class="dd">대플 담당자가 입력한 지급 사유 조회</div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="allowance_info_wrap">
+                            <h3 class="t3_sb">수당지급 정보 <span class="t3_r">(비용신청 <span class="txt_nth t3_sb">N</span>회차)</span></h3>
+                            <div class="allowance_info_box">
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">지급상태</div>
+                                        <div class="dd">미지급</div>
+                                    </li>
+                                    <li class="allowance_info_twin">
+                                        <div class="td">미지급 사유</div>
+                                        <div class="dd">대플 담당자가 입력한 지급 사유 조회</div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="allowance_info_wrap">
+                            <h3 class="t3_sb">수당지급 정보 <span class="t3_r">(비용신청 <span class="txt_nth t3_sb">N</span>회차)</span></h3>
+                            <div class="allowance_info_box">
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">지급상태</div>
+                                        <div class="dd">환수</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">지급일자</div>
+                                        <div class="dd">2025-00-00</div>
+                                    </li>
+                                </ul>
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">환수금액</div>
+                                        <div class="dd"><span class="txt_value">100,000</span> 원</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">환수일자</div>
+                                        <div class="dd">2025-00-00</div>
+                                    </li>
+                                    <li class="allowance_info_twin">
+                                        <div class="td">환수 사유</div>
+                                        <div class="dd">대플 담당자가 입력한 사유 조회</div>
+                                    </li>
+                                </ul>
+                                <ul class="allowance_info_ul">
+                                    <li>
+                                        <div class="td">총 활동 요청시간</div>
+                                        <div class="dd"><span class="txt_value">10</span> 시간</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">총 활동 인정시간</div>
+                                        <div class="dd"><span class="txt_value">10</span> 시간</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">신청금액</div>
+                                        <div class="dd"><span class="txt_value">100,000</span> 원</div>
+                                    </li>
+                                    <li>
+                                        <div class="td">인정금액</div>
+                                        <div class="dd"><span class="txt_value">100,000</span> 원</div>
+                                    </li>
+                                    <li class="allowance_info_twin">
+                                        <div class="td">의견내용</div>
+                                        <div class="dd">대플 담당자가 입력한 지급 사유 조회</div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
                         <div class="my_ptcp_from">
                             <div class="box_group_wrap mt24">
                                 <h3 class="t3_sb">참여자 정보</h3>
